force-app/main/default/objects/Lead_Associate__c/Lead_Associate__c.object-meta.xml
<CustomObject>
    <label>Lead Associate</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Associate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Associates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>