force-app/main/default/objects/Lead_Associate__c/fields/Company_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Company_Group_Key__c</fullName>
    <externalId>true</externalId>
    <label>Company Group Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>