force-app/main/default/objects/Lead_Associate__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <label>Conversion Date</label>
    <type>DateTime</type>
</CustomField>