force-app/main/default/objects/Lead_Associate__c/fields/Converted_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lead Associates (Historical)</relationshipLabel>
    <relationshipName>Lead_Associates_Historical</relationshipName>
    <type>Lookup</type>
</CustomField>