force-app/main/default/objects/Lead_Associate__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>