force-app/main/default/objects/Lead_Associate__c/validationRules/Email_or_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_or_Phone_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Email__c),
    ISBLANK(Phone__c)
)</errorConditionFormula>
    <errorMessage>At least one contact method (Email or Phone) is required for this associate.</errorMessage>
</ValidationRule>